Update to make dropdowns work

--- a/index.html
+++ b/index.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class=""><head><script src="//archive.org/includes/athena.js" type="text/javascript"></script>
-  <script type="text/javascript">window.addEventListener('DOMContentLoaded',function(){var v=archive_analytics.values;v.service='wb';v.server_name='wwwb-app213.us.archive.org';v.server_ms=612;archive_analytics.send_pageview({});});</script>
-  <script type="text/javascript" src="/_static/js/bundle-playback.js?v=HxkREWBo" charset="utf-8"></script>
-  <script type="text/javascript" src="/_static/js/wombat.js?v=txqj7nKC" charset="utf-8"></script>
-  <script>window.RufflePlayer=window.RufflePlayer||{};window.RufflePlayer.config={"autoplay":"on","unmuteOverlay":"hidden"};</script>
-  <script type="text/javascript" src="/_static/js/ruffle/ruffle.js"></script>
-  <script type="text/javascript">
-      __wm.init("https://web.archive.org/web");
-    __wm.wombat("https://reproductiverights.gov/","20250115014223","https://web.archive.org/","web","/_static/",
-          "1736905343");
-  </script>
-  <link rel="stylesheet" type="text/css" href="/_static/css/banner-styles.css?v=S1zqJCYt">
-  <link rel="stylesheet" type="text/css" href="/_static/css/iconochive.css?v=3PDvdIFv">
-  <!-- End Wayback Rewrite JS Include -->
-
+<html lang="en" class=""><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ReproductiveRights.gov - Know Your Rights: Reproductive Health Care</title>
@@ -26,27 +12,25 @@
     <script>
       document.createElement('main');
     </script>
-    <script src="./index.js"></script>
+    
     <link rel="stylesheet" href="./styles.css">
 
     <!-- Favicons -->
-    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/web/20250115014223im_/https://reproductiverights.gov/favicon.ico" sizes="16x16">
     <meta name="application-name" content="ReproductiveRights.gov">
 
     <!-- Description -->
     <meta name="description" content="While Roe v. Wade was overturned, abortion remains legal in many states, and other reproductive health care services remain protected by law.">
-    <link rel="canonical" href="https://reproductiverights.gov/">
+    <link rel="canonical" href="https://reproductiverights.online/">
 
     <!-- Facebook -->
     <meta property="og:title" content="ReproductiveRights.gov - Know Your Rights: Reproductive Health Care">
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="While Roe v. Wade was overturned, abortion remains legal in many states, and other reproductive health care services remain protected by law.">
-    <meta property="og:image" content="https://web.archive.org/web/20250115014223im_/https://reproductiverights.gov/assets/img/share.png?ver=0.9">
     <meta property="og:author" content="HHS">
     <meta property="article:author" content="HHS">
     <meta property="og:site_name" content="ReproductiveRights.gov">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://reproductiverights.gov/">
+    <meta property="og:url" content="https://reproductiverights.online/">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
@@ -59,8 +43,8 @@
           "@context": "https://schema.org",
           "@type": "Organization",
           "name": "ReproductiveRights.gov",
-          "url": "https://reproductiverights.gov/",
-          "logo": "https://reproductiverights.gov/assets/img/hhs-logo.png",
+          "url": "https://reproductiverights.online/",
+          "logo": "https://reproductiverights.gov/hhs-logo.png",
           "parentOrganization": [{
             "@type": "Organization",
             "name": "U.S. Department of Health & Human Services",
@@ -71,7 +55,7 @@
           "@context": "https://schema.org",
           "@type": "WebSite",
           "name": "ReproductiveRights.gov",
-          "url": "https://reproductiverights.gov/"
+          "url": "https://reproductiverights.online/"
         }
       ]
     </script>
@@ -527,10 +511,7 @@
       </div>
     </footer>
 
-    <script src="/web/20250115014223js_/https://reproductiverights.gov/assets/js/main.min.js?ver=0.10"></script>
-    <script src="/web/20250115014223js_/https://reproductiverights.gov/assets/js/uswds.min.js?ver=0.10"></script>
 
 
-
-
+    <script src="./index.js"></script>
   </body></html>
