--- a/emergency-care.html
+++ b/emergency-care.html
@@ -1,18 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class=""><head><script src="//archive.org/includes/athena.js" type="text/javascript"></script>
-  <script type="text/javascript">window.addEventListener('DOMContentLoaded',function(){var v=archive_analytics.values;v.service='wb';v.server_name='wwwb-app217.us.archive.org';v.server_ms=372;archive_analytics.send_pageview({});});</script>
-  <script type="text/javascript" src="/_static/js/bundle-playback.js?v=HxkREWBo" charset="utf-8"></script>
-  <script type="text/javascript" src="/_static/js/wombat.js?v=txqj7nKC" charset="utf-8"></script>
-  <script>window.RufflePlayer=window.RufflePlayer||{};window.RufflePlayer.config={"autoplay":"on","unmuteOverlay":"hidden"};</script>
-  <script type="text/javascript" src="/_static/js/ruffle/ruffle.js"></script>
-  <script type="text/javascript">
-      __wm.init("https://web.archive.org/web");
-    __wm.wombat("https://reproductiverights.gov/emergency-care","20241221214117","https://web.archive.org/","web","/_static/",
-          "1734817277");
-  </script>
-  <link rel="stylesheet" type="text/css" href="/_static/css/banner-styles.css?v=S1zqJCYt">
-  <link rel="stylesheet" type="text/css" href="/_static/css/iconochive.css?v=3PDvdIFv">
-  <!-- End Wayback Rewrite JS Include -->
+<html lang="en" class=""><head>
   
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,11 +13,10 @@
     <script>
       document.createElement('main');
     </script>
-    <script src="./index.js"></script>
+
     <link rel="stylesheet" href="./styles.css">
   
     <!-- Favicons -->
-    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/web/20241221214117im_/https://reproductiverights.gov/favicon.ico" sizes="16x16">
     <meta name="application-name" content="ReproductiveRights.gov">
   
     <!-- Description -->
@@ -41,7 +27,6 @@
     <meta property="og:title" content="ReproductiveRights.gov/emergency-care - Your Right to Emergency Medical Care">
     <meta property="og:locale" content="en_US">
     <meta property="og:description" content="In light of the Supreme Court's decision to overturn Roe v. Wade, it's more important than ever that you know your rights on receiving emergency medical care.">
-    <meta property="og:image" content="https://web.archive.org/web/20241221214117im_/https://reproductiverights.gov/assets/img/share.png?ver=0.9">
     <meta property="og:author" content="HHS">
     <meta property="article:author" content="HHS">
     <meta property="og:site_name" content="ReproductiveRights.gov">
@@ -59,8 +44,8 @@
           "@context": "https://schema.org",
           "@type": "Organization",
           "name": "ReproductiveRights.gov",
-          "url": "https://reproductiverights.gov/",
-          "logo": "https://reproductiverights.gov/assets/img/hhs-logo.png",
+          "url": "https://reproductiverights.online/",
+          "logo": "https://reproductiverights.gov/hhs-logo.png",
           "parentOrganization": [{
             "@type": "Organization",
             "name": "U.S. Department of Health & Human Services",
@@ -71,7 +56,7 @@
           "@context": "https://schema.org",
           "@type": "WebSite",
           "name": "ReproductiveRights.gov",
-          "url": "https://reproductiverights.gov/"
+          "url": "https://reproductiverights.online/"
         }
       ]
     </script>
@@ -147,7 +132,7 @@
     <header class="rr-header">
       <div class="rr-header__container rr-container">
         <div class="rr-header__logo">
-          <a href="/web/20241221214117/https://reproductiverights.gov/">
+          <a href="/web/20241221214117/https://reproductiverights.online/">
             <img src="./hhs-bird.png" width="38" height="43" alt="HHS Logo Mark">
             <div class="rr-header__logo__text">
               <span class="logo-first">Reproductive</span> <span class="logo-second">Rights</span><span class="logo-ext">.gov</span>
@@ -872,11 +857,5 @@
         </section>
       </div>
     </footer>
-  
-    <script src="/web/20241221214117js_/https://reproductiverights.gov/assets/js/main.min.js?ver=0.10"></script>
-    <script src="/web/20241221214117js_/https://reproductiverights.gov/assets/js/uswds.min.js?ver=0.10"></script>
-  
-  
-  
-  
+    <script src="./index.js"></script>
   </body></html>
