--- a/index_es.html
+++ b/index_es.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
-<html lang="es-US" class=""><head><script src="//archive.org/includes/athena.js" type="text/javascript"></script>
-  <script type="text/javascript">window.addEventListener('DOMContentLoaded',function(){var v=archive_analytics.values;v.service='wb';v.server_name='wwwb-app212.us.archive.org';v.server_ms=462;archive_analytics.send_pageview({});});</script>
-  <script type="text/javascript" src="/_static/js/bundle-playback.js?v=HxkREWBo" charset="utf-8"></script>
-  <script type="text/javascript" src="/_static/js/wombat.js?v=txqj7nKC" charset="utf-8"></script>
-  <script>window.RufflePlayer=window.RufflePlayer||{};window.RufflePlayer.config={"autoplay":"on","unmuteOverlay":"hidden"};</script>
-  <script type="text/javascript" src="/_static/js/ruffle/ruffle.js"></script>
-  <script type="text/javascript">
-      __wm.init("https://web.archive.org/web");
-    __wm.wombat("https://reproductiverights.gov/es","20250114132536","https://web.archive.org/","web","/_static/",
-          "1736861136");
-  </script>
-  <link rel="stylesheet" type="text/css" href="/_static/css/banner-styles.css?v=S1zqJCYt">
-  <link rel="stylesheet" type="text/css" href="/_static/css/iconochive.css?v=3PDvdIFv">
-  <!-- End Wayback Rewrite JS Include -->
-  
+<html lang="es-US" class=""><head>  
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ReproductiveRights.gov - Conozca sus derechos: Atención de la salud reproductiva</title>
@@ -26,11 +12,9 @@
     <script>
       document.createElement('main');
     </script>
-    <script src="./index.js"></script>
     <link rel="stylesheet" href="./styles.css">
   
     <!-- Favicons -->
-    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/web/20250114132536im_/https://reproductiverights.gov/favicon.ico" sizes="16x16">
     <meta name="application-name" content="ReproductiveRights.gov">
   
     <!-- Description -->
@@ -41,7 +25,6 @@
     <meta property="og:title" content="ReproductiveRights.gov - Conozca sus derechos: Atención de la salud reproductiva">
     <meta property="og:locale" content="es_US">
     <meta property="og:description" content="Aunque el caso Roe vs. Wade fue anulado, el aborto sigue siendo legal en muchos estados, y otros servicios de cuidado de salud reproductiva siguen estando protegidos por ley.">
-    <meta property="og:image" content="https://web.archive.org/web/20250114132536im_/https://reproductiverights.gov/assets/img/share-es.png?ver=0.9">
     <meta property="og:author" content="HHS">
     <meta property="article:author" content="HHS">
     <meta property="og:site_name" content="ReproductiveRights.gov">
@@ -59,8 +42,8 @@
           "@context": "https://schema.org",
           "@type": "Organization",
           "name": "ReproductiveRights.gov",
-          "url": "https://reproductiverights.gov/",
-          "logo": "https://reproductiverights.gov/assets/img/hhs-logo.png",
+          "url": "https://reproductiverights.online/",
+          "logo": "https://reproductiverights.gov/hhs-logo.png",
           "parentOrganization": [{
             "@type": "Organization",
             "name": "U.S. Department of Health & Human Services",
@@ -71,7 +54,7 @@
           "@context": "https://schema.org",
           "@type": "WebSite",
           "name": "ReproductiveRights.gov",
-          "url": "https://reproductiverights.gov/"
+          "url": "https://reproductiverights.online/"
         }
       ]
     </script>
@@ -521,11 +504,6 @@
         </section>
       </div>
     </footer>
-  
-    <script src="/web/20250114132536js_/https://reproductiverights.gov/assets/js/main.min.js?ver=0.10"></script>
-    <script src="/web/20250114132536js_/https://reproductiverights.gov/assets/js/uswds.min.js?ver=0.10"></script>
-  
-  
-  
+    <script src="./index.js"></script>
   
   </body></html>
