--- a/index_zh.html
+++ b/index_zh.html
@@ -1,18 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN" class=""><head><script src="//archive.org/includes/athena.js" type="text/javascript"></script>
-  <script type="text/javascript">window.addEventListener('DOMContentLoaded',function(){var v=archive_analytics.values;v.service='wb';v.server_name='wwwb-app210.us.archive.org';v.server_ms=896;archive_analytics.send_pageview({});});</script>
-  <script type="text/javascript" src="/_static/js/bundle-playback.js?v=HxkREWBo" charset="utf-8"></script>
-  <script type="text/javascript" src="/_static/js/wombat.js?v=txqj7nKC" charset="utf-8"></script>
-  <script>window.RufflePlayer=window.RufflePlayer||{};window.RufflePlayer.config={"autoplay":"on","unmuteOverlay":"hidden"};</script>
-  <script type="text/javascript" src="/_static/js/ruffle/ruffle.js"></script>
-  <script type="text/javascript">
-      __wm.init("https://web.archive.org/web");
-    __wm.wombat("https://reproductiverights.gov/zh/","20241221214118","https://web.archive.org/","web","/_static/",
-          "1734817278");
-  </script>
-  <link rel="stylesheet" type="text/css" href="/_static/css/banner-styles.css?v=S1zqJCYt">
-  <link rel="stylesheet" type="text/css" href="/_static/css/iconochive.css?v=3PDvdIFv">
-  <!-- End Wayback Rewrite JS Include -->
+<html lang="zh-CN" class=""><head>
   
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,11 +11,9 @@
     <link rel="preload" href="./PublicSans-Italic.woff" as="font" type="font/woff" crossorigin="">
   
     <script>document.createElement('main');</script>
-    <script src="./index.js"></script>
     <link rel="stylesheet" href="./styles.css">
   
     <!-- Favicons -->
-    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/web/20241221214118im_/https://reproductiverights.gov/favicon.ico" sizes="16x16">
     <meta name="application-name" content="ReproductiveRights.gov">
   
     <!-- Description -->
@@ -39,7 +24,6 @@
     <meta property="og:title" content="ReproductiveRights.gov - 了解您的权利：生殖健康保健">
     <meta property="og:locale" content="zh-CN">
     <meta property="og:description" content="虽然“罗伊诉韦德案”已被推翻，在许多州，堕胎仍是合法的，其他的生殖健康保健服务依然受到法律保护。 ">
-    <meta property="og:image" content="https://web.archive.org/web/20241221214118im_/https://reproductiverights.gov/assets/img/share.png?ver=0.9">
     <meta property="og:author" content="HHS">
     <meta property="article:author" content="HHS">
     <meta property="og:site_name" content="ReproductiveRights.gov">
@@ -58,8 +42,8 @@
           "@context": "https://schema.org",
           "@type": "Organization",
           "name":"ReproductiveRights.gov",
-          "url": "https://reproductiverights.gov/",
-          "logo": "https://reproductiverights.gov/assets/img/hhs-logo.png",
+          "url": "https://reproductiverights.online/",
+          "logo": "https://reproductiverights.gov/hhs-logo.png",
           "parentOrganization": [
             {
               "@type": "Organization",
@@ -72,7 +56,7 @@
           "@context": "https://schema.org",
           "@type": "WebSite",
           "name": "ReproductiveRights.gov",
-          "url": "https://reproductiverights.gov/"
+          "url": "https://reproductiverights.online/"
         }
       ]
     </script>
@@ -438,10 +422,5 @@
         </section>
       </div>
     </footer>
-  
-    <script src="/web/20241221214118js_/https://reproductiverights.gov/assets/js/main.min.js?ver=0.10"></script>
-    <script src="/web/20241221214118js_/https://reproductiverights.gov/assets/js/uswds.min.js?ver=0.10"></script>
-  
-  
-  
+    <script src="./index.js"></script>    
   </body></html>
