Fix first accordion

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </svg>
               </div>
             </summary>
-            <div class="rr-accordion__content" style="display: none;">
+            <div class="rr-accordion__content">
               <p>In light of the Supreme Court's decision to overturn Roe v. Wade, it's more important than ever that you know your rights on receiving emergency medical care.</p>
               <ul>
                 <li>The
