--- a/index_es.html
+++ b/index_es.html
@@ -230,7 +230,7 @@
                 </svg>
               </div>
             </summary>
-            <div class="rr-accordion__content" style="display: none;">
+            <div class="rr-accordion__content">
               <p>A la luz de la decisión de la Corte Suprema de anular Roe v. Wade, es más importante que nunca que conozca sus derechos para recibir atención médica de emergencia.</p>
               <ul>
                 <li>La
