--- a/index_zh.html
+++ b/index_zh.html
@@ -190,7 +190,7 @@
                 </svg>
               </div>
             </summary>
-            <div class="rr-accordion__content" style="display: none;">
+            <div class="rr-accordion__content">
               <p>根据《平价医疗法案》的要求，大多数健康保险计划须为您提供节育和计划生育咨询，没有自掏腰包的费用。这包括：</p>
               <ul>
                 <li>荷尔蒙法，比如避孕药和避孕环</li>
