--- a/index_zh.html
+++ b/index_zh.html
@@ -74,9 +74,10 @@
         All the best,<br />Robin
       </p>
       <p>
-        <a href="https://wrrap.org/" rel="noopener noreferer">WRRAP</a> | 
-        <a href="https://www.buymeacoffee.com/goudekettingrm" rel="nofollow">Support me</a>
+        <a href="https://wrrap.org/" rel="noopener noreferer" target="_blank">WRRAP</a> | 
+        <a href="https://www.buymeacoffee.com/goudekettingrm" rel="nofollow" target="_blank">Support me</a>
       </p>
+      <p class="small">If you notice anything broken or have anything to add, please don't hesitate to <a href='https://goudeketting.nl/#contact' rel="no opener noreferer" target="_blank">contact me</a>.</p>
     </div>
 
     <section class="usa-banner site-banner" aria-label="Official government website">
